[package]
name = "rimusic-convert"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
csv = "1.3.1"
chrono = "0.4.40"
